[package]
name = "swmr-barrier"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "Asymmetric Heavy-Light memory barriers for Single-Writer Multi-Reader (SWMR) scenarios, optimized for zero-cost readers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/swmr-barrier"
homepage = "https://github.com/ShaoG-R/swmr-barrier"
documentation = "https://docs.rs/swmr-barrier"
keywords = ["barrier", "memory-barrier", "swmr", "concurrency", "membarrier"]
categories = ["concurrency", "os", "hardware-support"]

[features]
default = []
loom = ["dep:loom"]

[dependencies]
cfg-if = "1.0"

# --- Linux Dependencies ---
[target.'cfg(target_os = "linux")'.dependencies]
membarrier = "0.2"
ctor = "0.6.1"

# --- Windows Dependencies ---
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation"
] }

# --- Loom Dependencies ---
[dependencies.loom]
version = "0.7"
optional = true