[package]
name = "swmr-barrier"
version = "0.1.0"
edition = "2024"
authors = ["ShaoG <shaog.rs@gmail.com>"]
description = "Asymmetric Heavy-Light memory barriers for Single-Writer Multi-Reader (SWMR) scenarios, optimized for zero-cost readers."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShaoG-R/swmr-barrier"
homepage = "https://github.com/ShaoG-R/swmr-barrier"
documentation = "https://docs.rs/swmr-barrier"
keywords = ["barrier", "memory-barrier", "swmr", "concurrency", "membarrier"]
categories = ["concurrency", "os", "hardware-support"]

[features]
default = []
loom = ["dep:loom"]

[dependencies]
# Process-wide memory barrier abstraction (handles Linux, Windows, and fallback)
# 进程级内存屏障抽象（处理 Linux、Windows 和回退）
membarrier = "0.2"

# --- Loom Dependencies ---
[dependencies.loom]
version = "0.7"
optional = true